examples/errors/non_bool_cond.adder
## A non-Bool condition — must be rejected (no truthiness).

fn main():
    if 1:
        print("yes")
